[FIX] Text alignment of about me body on big screens

--- a/static/portfolio/css/about_me.css
+++ b/static/portfolio/css/about_me.css
@@ -9,14 +9,14 @@
 }
 
 .about-me-body {
-    display: inline-block;
+    display: block;
     color: white;
     font-family: "Metropolis";
+    width: 45%;
+    margin: 0 auto;
 }
 
 .about-me-body p {
-    margin: 0 auto;
-    width: 45%;
     padding-top: 10px;
 }
 
